Bug 156134 - Missing "Go to" action for "Simulated numbering" issue type
Summary: Missing "Go to" action for "Simulated numbering" issue type
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-03 11:11 UTC by Samuel Mehrbrodt
Modified: 2023-07-06 09:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (9.22 KB, application/vnd.oasis.opendocument.text)
2023-07-03 11:11 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2023-07-03 11:11:20 UTC
Created attachment 188175 [details]
bugdoc

1. Open bugdoc
2. Go to a11y check deck

Issue "Simulated numbering “1. 2....”." should be clickable so that you can jump to the location where this issue appears.
Comment 1 Commit Notification 2023-07-06 07:47:14 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e894bdace448addd73c8f1aaf079c0e7ec84308d

tdf#156134 - Add "Go to" action for "Simulated numbering" issue type

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-07-06 09:16:32 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ef9be5b1947d4900a83ac1bb87bd21a7133cae2f

tdf#156134 - Add "Go to" action for "Simulated numbering" issue type

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.