tdf#156134 - Add "Go to" action for "Simulated numbering" issue type

Change-Id: I92f7ae620eb0fd540c8919a4bbb9cae1d375a391
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154071
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit a6e12924d299f83efd4ac11c36784775fe9e1d77)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154049